--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
           <h4>{{this.burger_name}}</h4>
         </div> 
         <div class="col-1/4">
-          <form action="/{{this.id}}?_method=UPDATE" method="POST">
+          <form action="/{{this.id}}?_method=PUT" method="POST">
             <input type="hidden" name="devoured" value="true">
             <button type="submit" id="devour-button" name="devour-button">Devour It</button>
           </form>
