--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,11 @@
 <div class="container">
 <div class="burger hero">
   <div class="burger-image">
-    <img src="https://upload.wikimedia.org/wikipedia/commons/1/11/Umami_Burger_hamburger.jpg" width="100%" height="400px">
+    <h1 class="burger-title-first">Devoured</h1>
+    <img src="https://upload.wikimedia.org/wikipedia/commons/b/b8/Big_Mac_hamburger_with_clear_background.png" width="30%">
   </div>
-    <h1 class="burger-title">Devoured<br/>Burger</h1>
+    
+    <h1 class="burger-title-last">Burger</h1>
 </div>  
 
 <div class="row">
@@ -12,7 +14,7 @@
       <h3>Burgers I Want to Try:</h3>
       {{#each burgers}}
       {{#unless this.devoured}}
-        <h4 class="burger-name">{{this.burger_name}}</h4>
+        <h4 class="burger-name">{{this.id}}. {{this.burger_name}}</h4>
         <form action="/{{this.id}}?_method=PUT" method="POST">
           <input type="hidden" name="devoured" value="true">
           <button type="submit" id="devour-button" name="devour-button">Devour It</button>
@@ -27,7 +29,7 @@
       <h3>Burgers I've Devoured:</h3>
       {{#each burgers}}
         {{#if this.devoured}}
-           <h4 class="burger-name">{{this.burger_name}}</h4>
+           <h4 class="burger-name">{{this.id}}. {{this.burger_name}}</h4>
         {{/if}}
       {{/each}}
     </div>
@@ -38,7 +40,7 @@
     <form class="burger-form" action="/" method="POST">
       <div class="form-group">
         <label for="burger-input">Enter the burger you'd like to try here:</label>
-        <input type="text" class="form-control" id="burger-input" name="burger-input" placeholder="Enter burger name here">
+        <input type="text" class="form-control" id="burger-input" name="burger_name" placeholder="Enter burger name here">
       </div>
       <button type="submit" id="submit-burger" name="submit-burger">Add Burger</button>
     </form> 
